<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txt_one_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_ordered_by_distance_1"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background"/>
    <TextView
        android:id="@+id/txt_five_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_ordered_by_distance_5"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"/>
    <View
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background"/>
    <TextView
        android:id="@+id/txt_ten_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_ordered_by_distance_10"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"/>

</LinearLayout>