<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".usecases.main.MainActivity"
    android:orientation="vertical"
    android:background="@color/background">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingStart="16dp"
      android:paddingEnd="16dp"
      android:layout_marginTop="32dp">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardAllShops"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="0.5"
        app:cardCornerRadius="16dp"
        android:layout_marginEnd="20dp">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_gravity="center_vertical"
          android:padding="16dp">
        <TextView
            android:id="@+id/txtNumShops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_init_num_shops"
            android:textSize="24sp"
            android:textColor="@color/orange"/>
        <TextView
            android:id="@+id/txtHelpShops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_shops"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:layout_marginTop="4dp"
            />
      </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDistance"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_weight="0.5"
        app:cardCornerRadius="16dp">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:layout_gravity="center_vertical"
          android:padding="16dp">
        <TextView
            android:visibility="gone"
            android:id="@+id/txtNumShopsDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/orange"/>
        <TextView
            android:id="@+id/txtHelpDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_short_by_distance"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:layout_marginTop="4dp"/>

      </LinearLayout>
    </androidx.cardview.widget.CardView>

  </LinearLayout>
  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rvCategory"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      tools:listitem="@layout/item_category"
      android:layout_marginBottom="32dp"
      android:layout_marginTop="24dp" />
  <FrameLayout
      android:id="@+id/progressbar"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="visible">
    <include
        layout="@layout/progressbar_view"/>

  </FrameLayout>
  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rvShops"
      android:visibility="gone"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:listitem="@layout/item_shop"
      android:paddingStart="16dp"
      android:paddingEnd="16dp"/>

</LinearLayout>